table persistent store, sidebar search

--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
 	"type": "module",
 	"dependencies": {
 		"@internationalized/date": "^3.5.2",
+		"@macfja/svelte-persistent-store": "^2.4.1",
 		"bits-ui": "^0.21.4",
 		"clsx": "^2.1.1",
 		"cmdk-sv": "^0.0.17",
@@ -46,8 +47,6 @@
 		"lucide-svelte": "^0.373.0",
 		"mode-watcher": "^0.3.0",
 		"paneforge": "^0.0.4",
-		"svelte-dnd-list": "^0.1.8",
-		"svelte-drag-and-drop-actions": "^1.0.1",
 		"svelte-sonner": "^0.3.22",
 		"sveltekit-superforms": "^2.12.6",
 		"tailwind-merge": "^2.3.0",
