--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
 		"lucide-svelte": "^0.373.0",
 		"mode-watcher": "^0.3.0",
 		"paneforge": "^0.0.4",
+		"svelte-persisted-store": "^0.9.2",
 		"svelte-sonner": "^0.3.22",
 		"sveltekit-superforms": "^2.12.6",
 		"tailwind-merge": "^2.3.0",
