--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
 		"bits-ui": "^0.21.4",
 		"clsx": "^2.1.1",
 		"cmdk-sv": "^0.0.17",
+		"deepcopy": "^2.1.0",
 		"embla-carousel-svelte": "^8.0.2",
 		"formsnap": "^1.0.0",
 		"json-server": "^1.0.0-beta.0",
