--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
 		"lucide-svelte": "^0.373.0",
 		"mode-watcher": "^0.3.0",
 		"paneforge": "^0.0.4",
+		"svelte-infinite-scroll": "^2.0.1",
 		"svelte-persisted-store": "^0.9.2",
 		"svelte-sonner": "^0.3.24",
 		"sveltekit-superforms": "^2.12.6",
