--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
 	"dependencies": {
 		"@internationalized/date": "^3.5.2",
 		"@macfja/svelte-persistent-store": "^2.4.1",
+		"@sveltejs/svelte-virtual-list": "^3.0.1",
 		"bits-ui": "^0.21.4",
 		"clsx": "^2.1.1",
 		"cmdk-sv": "^0.0.17",
