--- a/package.json
+++ b/package.json
@@ -56,6 +56,8 @@
 		"svelte-infinite-scroll": "^2.0.1",
 		"svelte-persisted-store": "^0.9.2",
 		"svelte-sonner": "^0.3.24",
+		"svelte-tiny-virtual-list": "^2.1.2",
+		"svelte-virtual-list": "^3.0.1",
 		"sveltekit-superforms": "^2.12.6",
 		"tailwind-merge": "^2.3.0",
 		"tailwind-variants": "^0.2.1",
