--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-	"editor.fontFamily": "Roboto Mono, 'Courier New', monospace"
+	"editor.fontFamily": "Source Code Pro, 'Courier New', monospace"
 }
