--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
 		"@internationalized/date": "^3.5.2",
 		"@macfja/svelte-persistent-store": "^2.4.1",
 		"@sveltejs/svelte-virtual-list": "^3.0.1",
+		"ag-grid-community": "^32.0.2",
 		"bits-ui": "^0.21.4",
 		"clsx": "^2.1.1",
 		"cmdk-sv": "^0.0.17",
