--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"server": "json-server src/lib/db.json"
 	},
 	"devDependencies": {
+		"@eslint/js": "^9.9.0",
 		"@sveltejs/adapter-auto": "^3.0.0",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
@@ -20,9 +21,10 @@
 		"@typescript-eslint/eslint-plugin": "^7.0.0",
 		"@typescript-eslint/parser": "^7.0.0",
 		"autoprefixer": "^10.4.16",
-		"eslint": "^8.56.0",
+		"eslint": "^9.9.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.35.1",
+		"globals": "^15.9.0",
 		"postcss": "^8.4.32",
 		"postcss-load-config": "^5.0.2",
 		"prettier": "^3.1.1",
@@ -34,6 +36,7 @@
 		"tailwindcss": "^3.3.6",
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
+		"typescript-eslint": "^8.1.0",
 		"vite": "^5.2.11"
 	},
 	"type": "module",
