--- a/package.json
+++ b/package.json
@@ -44,9 +44,12 @@
 		"@ag-grid-enterprise/server-side-row-model": "^32.0.2",
 		"@fontsource/open-sans": "^5.0.28",
 		"@internationalized/date": "^3.5.2",
+		"@types/blob-stream": "^0.1.33",
+		"@types/pdfmake": "^0.2.9",
 		"ag-grid-community": "^32.0.2",
 		"ag-grid-enterprise": "^32.0.2",
 		"bits-ui": "^0.21.4",
+		"blob-stream": "^0.1.3",
 		"clsx": "^2.1.1",
 		"cmdk-sv": "^0.0.17",
 		"deepcopy": "^2.1.0",
@@ -55,6 +58,7 @@
 		"json-server": "^1.0.0-beta.0",
 		"lucide-svelte": "^0.373.0",
 		"mode-watcher": "^0.3.0",
+		"pdfmake": "^0.2.12",
 		"svelte-persisted-store": "^0.9.2",
 		"svelte-sonner": "^0.3.24",
 		"svelte-tiny-virtual-list": "^2.1.2",
