--- a/package.json
+++ b/package.json
@@ -42,10 +42,10 @@
 	"dependencies": {
 		"@ag-grid-community/locale": "^32.0.2",
 		"@ag-grid-enterprise/server-side-row-model": "^32.0.2",
+		"@compdfkit_pdf_sdk/webviewer": "^2.2.2",
 		"@fontsource/open-sans": "^5.0.28",
 		"@internationalized/date": "^3.5.2",
 		"@types/blob-stream": "^0.1.33",
-		"@types/pdfmake": "^0.2.9",
 		"ag-grid-community": "^32.0.2",
 		"ag-grid-enterprise": "^32.0.2",
 		"bits-ui": "^0.21.4",
@@ -58,7 +58,6 @@
 		"json-server": "^1.0.0-beta.0",
 		"lucide-svelte": "^0.373.0",
 		"mode-watcher": "^0.3.0",
-		"pdfmake": "^0.2.12",
 		"svelte-persisted-store": "^0.9.2",
 		"svelte-sonner": "^0.3.24",
 		"svelte-tiny-virtual-list": "^2.1.2",
