--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
 		"html2pdf": "^0.0.11",
 		"html2pdf.js": "^0.10.2",
 		"json-server": "^1.0.0-beta.0",
+		"jspdf": "^2.5.1",
 		"lucide-svelte": "^0.373.0",
 		"mode-watcher": "^0.3.0",
 		"svelte-persisted-store": "^0.9.2",
