--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
 		"@types/eslint": "^8.56.0",
+		"@types/qrcode": "^1.5.5",
 		"@typescript-eslint/eslint-plugin": "^7.0.0",
 		"@typescript-eslint/parser": "^7.0.0",
 		"autoprefixer": "^10.4.16",
@@ -59,6 +60,7 @@
 		"jspdf": "^2.5.1",
 		"lucide-svelte": "^0.373.0",
 		"mode-watcher": "^0.3.0",
+		"qrcode": "^1.5.4",
 		"svelte-persisted-store": "^0.9.2",
 		"svelte-sonner": "^0.3.24",
 		"svelte-tiny-virtual-list": "^2.1.2",
