--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"@types/qrcode": "^1.5.5",
 		"@typescript-eslint/eslint-plugin": "^7.0.0",
 		"@typescript-eslint/parser": "^7.0.0",
+		"@vite-pwa/sveltekit": "^0.6.6",
 		"autoprefixer": "^10.4.16",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.35.1",
@@ -47,6 +48,7 @@
 		"@compdfkit_pdf_sdk/webviewer": "^2.2.2",
 		"@fontsource/open-sans": "^5.0.28",
 		"@internationalized/date": "^3.5.2",
+		"@vite-pwa/assets-generator": "^0.2.6",
 		"ag-grid-community": "^32.0.2",
 		"ag-grid-enterprise": "^32.0.2",
 		"bits-ui": "^0.21.4",
