--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,6 @@
 {
-	"editor.fontFamily": "Roboto mono, monospace"
+	"editor.fontFamily": "Roboto mono, monospace",
+	"i18n-ally.localesPaths": [
+		"src/locales"
+	]
 }
