--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
 		"sveltekit-superforms": "^2.19.0",
 		"tailwind-merge": "^2.3.0",
 		"tailwind-variants": "^0.2.1",
+		"uuid": "^11.0.2",
 		"vaul-svelte": "^0.3.0",
 		"zod": "^3.23.8"
 	}
