--- a/package.json
+++ b/package.json
@@ -4,16 +4,18 @@
 	"private": true,
 	"scripts": {
 		"dev": "vite dev --host",
-		"build": "vite build",
+		"build": "paraglide-js compile --project ./project.inlang --outdir ./src\\paraglide && vite build",
 		"preview": "vite preview",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --check . && eslint .",
 		"format": "prettier --write .",
-		"server": "json-server src/lib/db.json"
+		"server": "json-server src/lib/db.json",
+		"postinstall": "paraglide-js compile --project ./project.inlang --outdir ./src\\paraglide"
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.9.0",
+		"@inlang/paraglide-js": "1.11.3",
 		"@inlang/paraglide-sveltekit": "^0.12.1",
 		"@internationalized/date": "^3.6.0",
 		"@sveltejs/adapter-auto": "^3.0.0",
@@ -68,7 +70,6 @@
 		"json-server": "^1.0.0-beta.0",
 		"jspdf": "^2.5.1",
 		"qrcode": "^1.5.4",
-		"svelte-i18n": "^4.0.1",
 		"svelte-persisted-store": "^0.9.2",
 		"svelte-tiny-virtual-list": "^2.1.2",
 		"tailwind-merge": "^2.3.0",
