--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
 		"tailwind-merge": "^2.3.0",
 		"tailwind-variants": "^0.2.1",
 		"tailwindcss-animate": "^1.0.7",
-		"uuid": "^11.0.2"
+		"uuid": "^11.0.2",
+		"@inlang/paraglide-sveltekit": "0.12.1"
 	}
 }
