--- a/project.inlang/settings.json
+++ b/project.inlang/settings.json
@@ -1,6 +1,6 @@
 {
   "$schema": "https://inlang.com/schema/project-settings",
-  "sourceLanguageTag": "en",
+  "sourceLanguageTag": "cz",
   "languageTags": [
     "en",
     "cz",
