--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.9.0",
-		"@inlang/paraglide-js": "1.11.3",
+		"@inlang/paraglide-js": "1.11.8",
 		"@inlang/paraglide-sveltekit": "^0.12.1",
 		"@internationalized/date": "^3.6.0",
 		"@sveltejs/adapter-auto": "^3.0.0",
@@ -44,7 +44,9 @@
 		"svelte": "^5.0.0",
 		"svelte-check": "^4.0.0",
 		"svelte-dnd-action": "^0.9.51",
+		"svelte-flag-icons": "^2.0.1",
 		"svelte-sonner": "^0.3.28",
+		"sveltekit-adapter-iis": "^1.4.1",
 		"sveltekit-superforms": "^2.21.1",
 		"tailwindcss": "^3.3.6",
 		"tslib": "^2.4.1",
@@ -60,6 +62,7 @@
 		"@ag-grid-enterprise/server-side-row-model": "^32.0.2",
 		"@compdfkit_pdf_sdk/webviewer": "^2.2.2",
 		"@fontsource/open-sans": "^5.0.28",
+		"@inlang/paraglide-sveltekit": "0.15.5",
 		"@vite-pwa/assets-generator": "^0.2.6",
 		"ag-grid-community": "^32.0.2",
 		"ag-grid-enterprise": "^32.0.2",
@@ -69,13 +72,13 @@
 		"html2pdf.js": "^0.10.2",
 		"json-server": "^1.0.0-beta.0",
 		"jspdf": "^2.5.1",
+		"pwa-asset-generator": "^6.4.0",
 		"qrcode": "^1.5.4",
 		"svelte-persisted-store": "^0.9.2",
 		"svelte-tiny-virtual-list": "^2.1.2",
 		"tailwind-merge": "^2.3.0",
 		"tailwind-variants": "^0.2.1",
 		"tailwindcss-animate": "^1.0.7",
-		"uuid": "^11.0.2",
-		"@inlang/paraglide-sveltekit": "0.12.1"
+		"uuid": "^11.0.2"
 	}
 }
