--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,5 @@
 {
-	"extends": "./.svelte-kit/tsconfig.json",
+	"extends": "./.svelte-kit/adapter-iis/app/client/tsconfig.json",
 	"compilerOptions": {
 		"allowJs": true,
 		"checkJs": true,
