--- a/package.json
+++ b/package.json
@@ -3,19 +3,19 @@
 	"version": "0.0.1",
 	"private": true,
 	"scripts": {
-		"dev": "vite dev --host",
-		"build": "paraglide-js compile --project ./project.inlang --outdir ./src\\paraglide && vite build",
+		"dev": "svelte-kit sync && vite dev --host --port=3001 --mode develop",
+		"build:develop": "svelte-kit sync && vite build --mode develop",
+		"build:production": "svelte-kit sync && vite build --mode production",
 		"preview": "vite preview",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --check . && eslint .",
 		"format": "prettier --write .",
 		"server": "json-server src/lib/db.json",
-		"postinstall": "paraglide-js compile --project ./project.inlang --outdir ./src\\paraglide"
+		"prepare": "svelte-kit sync"
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.9.0",
-		"@inlang/paraglide-js": "1.11.8",
 		"@inlang/paraglide-sveltekit": "^0.12.1",
 		"@internationalized/date": "^3.6.0",
 		"@sveltejs/adapter-auto": "^3.0.0",
@@ -25,9 +25,10 @@
 		"@types/qrcode": "^1.5.5",
 		"@typescript-eslint/eslint-plugin": "^7.0.0",
 		"@typescript-eslint/parser": "^7.0.0",
-		"@vite-pwa/sveltekit": "^0.6.6",
+		"@vite-pwa/assets-generator": "^0.2.6",
+		"@vite-pwa/sveltekit": "^0.6.7",
 		"autoprefixer": "^10.4.16",
-		"bits-ui": "^1.0.0-next.66",
+		"bits-ui": "^1.0.0-next.77",
 		"embla-carousel-svelte": "^8.5.1",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.45.1",
@@ -63,7 +64,6 @@
 		"@compdfkit_pdf_sdk/webviewer": "^2.2.2",
 		"@fontsource/open-sans": "^5.0.28",
 		"@inlang/paraglide-sveltekit": "0.15.5",
-		"@vite-pwa/assets-generator": "^0.2.6",
 		"ag-grid-community": "^32.0.2",
 		"ag-grid-enterprise": "^32.0.2",
 		"clsx": "^2.1.1",
