fix: build, sidebar, ag grid

--- a/.env.development
+++ b/.env.development
@@ -1,11 +1,11 @@
 # Config
-ENVIRONMENT="production"
+ENVIRONMENT="development"
 ORIGIN="http://localhost:3001"
-COLOR="red"
+COLOR="green"
 
 # Private
 PRIVATE_FOO="BAR1"
 
 # Public
-PUBLIC_ENVIRONMENT="production"
+PUBLIC_ENVIRONMENT="development"
 PUBLIC_FOO="BAR2"
