--- a/.env.staging
+++ b/.env.staging
@@ -1,11 +1,11 @@
 # Config
-ENVIRONMENT="production"
+ENVIRONMENT="staging"
 ORIGIN="http://localhost:3001"
-COLOR="red"
+COLOR="blue"
 
 # Private
 PRIVATE_FOO="BAR1"
 
 # Public
-PUBLIC_ENVIRONMENT="production"
+PUBLIC_ENVIRONMENT="staging"
 PUBLIC_FOO="BAR2"
