--- a/.env.development
+++ b/.env.development
@@ -2,6 +2,7 @@
 ENVIRONMENT="development"
 ORIGIN="http://localhost:3001"
 COLOR="green"
+API_ROUTE="http://10.2.2.10/albiline.test/api/v1/"
 
 # Private
 PRIVATE_FOO="BAR1"
@@ -9,3 +10,4 @@ PRIVATE_FOO="BAR1"
 # Public
 PUBLIC_ENVIRONMENT="development"
 PUBLIC_FOO="BAR2"
+
