feat: login form with api connection

--- a/.env.development
+++ b/.env.development
@@ -2,7 +2,6 @@
 ENVIRONMENT="development"
 ORIGIN="http://localhost:3001"
 COLOR="green"
-API_ROUTE="http://10.2.2.10/albiline.test/api/v1/"
 
 # Private
 PRIVATE_FOO="BAR1"
@@ -10,4 +9,5 @@ PRIVATE_FOO="BAR1"
 # Public
 PUBLIC_ENVIRONMENT="development"
 PUBLIC_FOO="BAR2"
+PUBLIC_API_ROUTE="http://10.2.2.10/albiline.test/api/v1/"
 
