--- a/.env.staging
+++ b/.env.staging
@@ -1,11 +1,6 @@
 # Config
 ENVIRONMENT="staging"
-ORIGIN="http://localhost:3001"
-COLOR="blue"
-
-# Private
-PRIVATE_FOO="BAR1"
+ORIGIN="http://10.2.2.10:3001"
 
 # Public
 PUBLIC_ENVIRONMENT="staging"
-PUBLIC_FOO="BAR2"
