--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"@eslint/js": "^9.9.0",
 		"@inlang/paraglide-sveltekit": "^0.12.1",
 		"@internationalized/date": "^3.6.0",
+		"@smui-extra/chip-input": "^8.0.0-beta.3",
 		"@sveltejs/adapter-auto": "^3.0.0",
 		"@sveltejs/kit": "^2.5.27",
 		"@sveltejs/vite-plugin-svelte": "^4.0.0",
