--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
 		"dotenv": "^16.4.7",
 		"html2pdf": "^0.0.11",
 		"html2pdf.js": "^0.10.2",
+		"js-sha512": "^0.9.0",
 		"json-server": "^1.0.0-beta.0",
 		"jspdf": "^2.5.1",
 		"pwa-asset-generator": "^6.4.0",
