--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
 		"ag-grid-enterprise": "^32.0.2",
 		"clsx": "^2.1.1",
 		"cross-env": "^7.0.3",
+		"crypto-js": "^4.2.0",
 		"deepcopy": "^2.1.0",
 		"dotenv": "^16.4.7",
 		"html2pdf": "^0.0.11",
@@ -77,6 +78,7 @@
 		"js-sha512": "^0.9.0",
 		"json-server": "^1.0.0-beta.0",
 		"jspdf": "^2.5.1",
+		"jssha": "^3.3.1",
 		"pwa-asset-generator": "^6.4.0",
 		"qrcode": "^1.5.4",
 		"svelte-persisted-store": "^0.9.2",
