--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
 		"@ag-grid-enterprise/server-side-row-model": "^32.0.2",
 		"@compdfkit_pdf_sdk/webviewer": "^2.2.2",
 		"@fontsource/open-sans": "^5.0.28",
+		"@fortawesome/free-solid-svg-icons": "^6.7.2",
 		"@inlang/paraglide-sveltekit": "0.15.5",
 		"ag-grid-community": "^32.0.2",
 		"ag-grid-enterprise": "^32.0.2",
@@ -82,7 +83,9 @@
 		"jssha": "^3.3.1",
 		"pwa-asset-generator": "^6.4.0",
 		"qrcode": "^1.5.4",
+		"svelte-fa": "^4.0.3",
 		"svelte-persisted-store": "^0.9.2",
+		"svelte-portal": "^2.2.1",
 		"svelte-tiny-virtual-list": "^2.1.2",
 		"tailwind-merge": "^2.3.0",
 		"tailwind-variants": "^0.2.1",
