--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
 		"tailwind-merge": "^2.3.0",
 		"tailwind-variants": "^0.2.1",
 		"tailwindcss-animate": "^1.0.7",
-		"uuid": "^11.0.2"
+		"uuid": "^11.0.2",
+		"xlsx": "^0.18.5"
 	}
 }
