--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
 		"js-sha512": "^0.9.0",
 		"json-server": "^1.0.0-beta.0",
 		"jspdf": "^2.5.1",
+		"jsprintmanager": "^7.0.2",
 		"jssha": "^3.3.1",
 		"pwa-asset-generator": "^6.4.0",
 		"qrcode": "^1.5.4",
