--- a/package.json
+++ b/package.json
@@ -83,6 +83,8 @@
 		"jspdf": "^2.5.1",
 		"jsprintmanager": "^7.0.2",
 		"jssha": "^3.3.1",
+		"lodash": "^4.17.21",
+		"lodash-es": "^4.17.21",
 		"pwa-asset-generator": "^6.4.0",
 		"qrcode": "^1.5.4",
 		"svelte-fa": "^4.0.3",
