--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"@eslint/js": "^9.9.0",
 		"@inlang/paraglide-sveltekit": "^0.12.1",
 		"@internationalized/date": "^3.6.0",
+		"@lucide/svelte": "^0.483.0",
 		"@smui-extra/chip-input": "^8.0.0-beta.3",
 		"@sveltejs/adapter-auto": "^3.0.0",
 		"@sveltejs/kit": "^2.5.27",
@@ -31,7 +32,7 @@
 		"@vite-pwa/assets-generator": "^0.2.6",
 		"@vite-pwa/sveltekit": "^0.6.7",
 		"autoprefixer": "^10.4.16",
-		"bits-ui": "^1.0.0-next.77",
+		"bits-ui": "^1.3.13",
 		"embla-carousel-svelte": "^8.5.1",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.45.1",
