--- a/package.json
+++ b/package.json
@@ -14,32 +14,29 @@
 		"lint": "prettier --check . && eslint .",
 		"format": "prettier --write .",
 		"server": "json-server src/lib/db.json",
-		"prepare": ""
+		"prepare": "",
+		"machine-translate": "inlang machine translate --project project.inlang"
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.9.0",
+		"@inlang/cli": "^3.0.0",
+		"@inlang/paraglide-js": "2.0.4",
 		"@internationalized/date": "^3.6.0",
 		"@lucide/svelte": "^0.483.0",
-		"@smui-extra/chip-input": "^8.0.0-beta.3",
-		"@sveltejs/adapter-auto": "^3.0.0",
 		"@sveltejs/kit": "^2.5.27",
 		"@sveltejs/vite-plugin-svelte": "^4.0.0",
 		"@types/eslint": "^8.56.0",
-		"@types/qrcode": "^1.5.5",
 		"@typescript-eslint/eslint-plugin": "^7.0.0",
 		"@typescript-eslint/parser": "^7.0.0",
 		"@vite-pwa/assets-generator": "^0.2.6",
 		"@vite-pwa/sveltekit": "^0.6.7",
 		"autoprefixer": "^10.4.16",
 		"bits-ui": "^1.3.13",
-		"embla-carousel-svelte": "^8.5.1",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.45.1",
-		"formsnap": "^2.0.0-next.1",
 		"globals": "^15.9.0",
 		"lucide-svelte": "^0.468.0",
 		"mode-watcher": "^0.5.0",
-		"paneforge": "^1.0.0-next.1",
 		"postcss": "^8.4.32",
 		"postcss-load-config": "^5.0.2",
 		"prettier": "^3.1.1",
@@ -49,47 +46,34 @@
 		"svelte-check": "^4.0.0",
 		"svelte-dnd-action": "^0.9.51",
 		"svelte-flag-icons": "^2.0.1",
-		"svelte-render-scan": "^1.0.5",
 		"svelte-sonner": "^0.3.28",
 		"sveltekit-adapter-iis": "^1.4.1",
-		"sveltekit-superforms": "^2.21.1",
 		"tailwindcss": "^3.3.6",
 		"tslib": "^2.4.1",
 		"typescript": "^5.5.0",
 		"typescript-eslint": "^8.1.0",
-		"vaul-svelte": "^1.0.0-next.3",
 		"vite": "^5.4.4",
 		"zod": "^3.23.8"
 	},
 	"type": "module",
 	"dependencies": {
 		"@ag-grid-community/locale": "^32.0.2",
-		"@ag-grid-enterprise/server-side-row-model": "^32.0.2",
 		"@compdfkit_pdf_sdk/webviewer": "^2.2.2",
-		"@fontsource/open-sans": "^5.0.28",
 		"@fortawesome/free-solid-svg-icons": "^6.7.2",
 		"ag-grid-community": "^32.0.2",
 		"ag-grid-enterprise": "^32.0.2",
 		"clsx": "^2.1.1",
 		"cross-env": "^7.0.3",
-		"crypto-js": "^4.2.0",
 		"deepcopy": "^2.1.0",
 		"dotenv": "^16.4.7",
-		"html2pdf": "^0.0.11",
 		"html2pdf.js": "^0.10.2",
 		"js-sha512": "^0.9.0",
-		"json-server": "^1.0.0-beta.0",
 		"jspdf": "^2.5.1",
 		"jsprintmanager": "^7.0.2",
-		"jssha": "^3.3.1",
-		"lodash": "^4.17.21",
-		"lodash-es": "^4.17.21",
 		"pwa-asset-generator": "^6.4.0",
 		"qrcode": "^1.5.4",
 		"svelte-fa": "^4.0.3",
-		"svelte-persisted-store": "^0.9.2",
 		"svelte-portal": "^2.2.1",
-		"svelte-tiny-virtual-list": "^2.1.2",
 		"tailwind-merge": "^2.3.0",
 		"tailwind-variants": "^0.2.1",
 		"tailwindcss-animate": "^1.0.7",
