--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
 		"clsx": "^2.1.1",
 		"cross-env": "^7.0.3",
 		"deepcopy": "^2.1.0",
+		"dexie": "^4.0.11",
 		"dotenv": "^16.4.7",
 		"html2pdf.js": "^0.10.2",
 		"js-sha512": "^0.9.0",
