--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 		"@sveltejs/kit": "^2.5.27",
 		"@sveltejs/vite-plugin-svelte": "^4.0.0",
 		"@types/eslint": "^8.56.0",
+		"@types/js-cookie": "^3.0.6",
 		"@typescript-eslint/eslint-plugin": "^7.0.0",
 		"@typescript-eslint/parser": "^7.0.0",
 		"@vite-pwa/assets-generator": "^0.2.6",
@@ -68,6 +69,7 @@
 		"dexie": "^4.0.11",
 		"dotenv": "^16.4.7",
 		"html2pdf.js": "^0.10.2",
+		"js-cookie": "^3.0.5",
 		"js-sha512": "^0.9.0",
 		"jspdf": "^2.5.1",
 		"jsprintmanager": "^7.0.2",
