--- a/package.json
+++ b/package.json
@@ -69,10 +69,10 @@
 		"dexie": "^4.0.11",
 		"dotenv": "^16.4.7",
 		"html2pdf.js": "^0.10.2",
-		"js-cookie": "^3.0.5",
 		"js-sha512": "^0.9.0",
 		"jspdf": "^2.5.1",
 		"jsprintmanager": "^7.0.2",
+		"lodash-es": "^4.17.21",
 		"pwa-asset-generator": "^6.4.0",
 		"qrcode": "^1.5.4",
 		"svelte-fa": "^4.0.3",
