--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,9 @@
 		"sourceMap": true,
 		"strict": true,
 		"moduleResolution": "bundler",
-
+		"types": [
+			"vite-plugin-pwa/info"
+		],
 	},
 
 	// Path aliases are handled by https://kit.svelte.dev/docs/configuration#alias
