feat: sending columnList, password regex on server, sidebar avatar

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 		"@sveltejs/kit": "^2.5.27",
 		"@sveltejs/vite-plugin-svelte": "^4.0.0",
 		"@types/eslint": "^8.56.0",
+		"@types/express": "^5.0.1",
 		"@types/js-cookie": "^3.0.6",
 		"@types/lodash-es": "^4.17.12",
 		"@typescript-eslint/eslint-plugin": "^7.0.0",
@@ -62,6 +63,7 @@
 		"@ag-grid-community/locale": "^32.0.2",
 		"@compdfkit_pdf_sdk/webviewer": "^2.2.2",
 		"@fortawesome/free-solid-svg-icons": "^6.7.2",
+		"@types/jsprintmanager": "^3.0.0",
 		"ag-grid-community": "^32.0.2",
 		"ag-grid-enterprise": "^32.0.2",
 		"clsx": "^2.1.1",
@@ -69,6 +71,7 @@
 		"deepcopy": "^2.1.0",
 		"dexie": "^4.0.11",
 		"dotenv": "^16.4.7",
+		"express": "^5.1.0",
 		"html2pdf.js": "^0.10.2",
 		"js-sha512": "^0.9.0",
 		"jspdf": "^2.5.1",
