--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,7 @@
 		"strict": true,
 		"moduleResolution": "bundler",
 		"types": [
-			"vite-plugin-pwa/info"
+			"vite-plugin-pwa/info",
 		],
 	},
 
