--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
 		"jspdf": "^2.5.1",
 		"jsprintmanager": "^7.0.2",
 		"lodash-es": "^4.17.21",
+		"paneforge": "^0.0.6",
 		"pwa-asset-generator": "^6.4.0",
 		"qrcode": "^1.5.4",
 		"sha256": "^0.2.0",
