--- a/package.json
+++ b/package.json
@@ -60,12 +60,12 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"@ag-grid-community/locale": "^32.0.2",
+		"@ag-grid-community/locale": "^33.0",
 		"@compdfkit_pdf_sdk/webviewer": "^2.2.2",
 		"@fortawesome/free-solid-svg-icons": "^6.7.2",
 		"@types/jsprintmanager": "^3.0.0",
-		"ag-grid-community": "^32.0.2",
-		"ag-grid-enterprise": "^32.0.2",
+		"ag-grid-community": "^33.0",
+		"ag-grid-enterprise": "^33.0",
 		"clsx": "^2.1.1",
 		"cross-env": "^7.0.3",
 		"deepcopy": "^2.1.0",
@@ -74,7 +74,7 @@
 		"express": "^5.1.0",
 		"html2pdf.js": "^0.10.2",
 		"js-sha512": "^0.9.0",
-		"jspdf": "^2.5.1",
+		"jspdf": "3.0.1",
 		"jsprintmanager": "^7.0.2",
 		"lodash-es": "^4.17.21",
 		"paneforge": "^0.0.6",
