--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
 		"typescript": "^5.5.0",
 		"typescript-eslint": "^8.1.0",
 		"vite": "^5.4.4",
+		"vite-plugin-devtools-json": "^0.2.0",
 		"zod": "^3.23.8"
 	},
 	"type": "module",
