--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
 		"@inlang/paraglide-js": "2.0.4",
 		"@internationalized/date": "^3.6.0",
 		"@lucide/svelte": "^0.483.0",
-		"@sveltejs/kit": "^2.5.27",
-		"@sveltejs/vite-plugin-svelte": "^4.0.0",
+		"@sveltejs/kit": "^2.0.0",
+		"@sveltejs/vite-plugin-svelte": "^5.0.0",
 		"@types/eslint": "^8.56.0",
 		"@types/express": "^5.0.1",
 		"@types/js-cookie": "^3.0.6",
@@ -34,7 +34,7 @@
 		"@vite-pwa/assets-generator": "^0.2.6",
 		"@vite-pwa/sveltekit": "^0.6.8",
 		"autoprefixer": "^10.4.16",
-		"bits-ui": "^1.3.13",
+		"bits-ui": "^2.8.8",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.45.1",
 		"globals": "^15.9.0",
@@ -45,7 +45,7 @@
 		"prettier": "^3.1.1",
 		"prettier-plugin-svelte": "^3.2.6",
 		"prettier-plugin-tailwindcss": "^0.5.9",
-		"svelte": "^5.0.0",
+		"svelte": "^5.0.0-next.1",
 		"svelte-check": "^4.0.0",
 		"svelte-dnd-action": "^0.9.51",
 		"svelte-flag-icons": "^2.0.1",
@@ -55,7 +55,7 @@
 		"tslib": "^2.4.1",
 		"typescript": "^5.5.0",
 		"typescript-eslint": "^8.1.0",
-		"vite": "^5.4.4",
+		"vite": "^6.0.0",
 		"vite-plugin-devtools-json": "^0.2.0",
 		"zod": "^3.23.8"
 	},
