--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
 		"@vite-pwa/assets-generator": "^0.2.6",
 		"@vite-pwa/sveltekit": "^0.6.8",
 		"autoprefixer": "^10.4.16",
-		"bits-ui": "^2.8.8",
+		"bits-ui": "^1.8.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.45.1",
 		"globals": "^15.9.0",
@@ -65,6 +65,7 @@
 		"@compdfkit_pdf_sdk/webviewer": "^2.2.2",
 		"@fortawesome/free-solid-svg-icons": "^6.7.2",
 		"@types/jsprintmanager": "^3.0.0",
+		"@vitejs/plugin-basic-ssl": "^2.0.0",
 		"ag-grid-community": "^33.3.0",
 		"ag-grid-enterprise": "^33.3.0",
 		"clsx": "^2.1.1",
